# market-data-pipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: tickers.yaml
docs/: GUIDE.md
src/mdp/: __init__.py  cli.py  config.py
src/mdp/ingest/: __init__.py  equities.py  macro.py
src/mdp/storage/: duckdb_store.py  parquet.py
src/mdp/validate/: schemas.py
tests/: test_cli.py  test_config.py  test_duckdb_store.py  test_equities.py  test_macro.py  test_parquet.py  test_schemas.py
