[project]
name = "market-data-pipeline"
version = "0.1.0"
description = "Local-first end-of-day market data pipeline: ingest, validate, land as Parquet, load into DuckDB."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "duckdb>=1.1",
    "fredapi>=0.5.2",
    "pandas>=2.2",
    "pandera>=0.22",
    "pyarrow>=17",
    "pyyaml>=6.0",
    "typer>=0.12",
    "yfinance>=0.2.40",
]

[project.scripts]
mdp = "mdp.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8.2",
    "ruff>=0.6",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdp"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

# These libraries ship no type stubs; treat their symbols as untyped rather
# than littering the codebase with per-call ignores.
[[tool.mypy.overrides]]
module = ["yfinance.*", "fredapi.*", "duckdb.*", "pandas.*", "pyarrow.*", "pandera.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
